first pass at iphoneX layout

--- a/quiz_game.html
+++ b/quiz_game.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="quiz_game.css">
+    <title>Quiz Game</title>
 </head>
 <body>
-    
+    <section class="container">
+            <header class="nav">
+                    <div id="highscore">HighScore</div>
+                    <div id="timer">Timer</div>
+                </header>
+            
+        <main class="quizBox">
+            <div id="question">
+                Welcome to the ultimate Full-stack Web Developer BootCamp Quiz! Test your web developer knowledge and get your name on the leaderboards. You have 60 seconds to answer as many questions correctly as possible, but if you get them wrong, you'll have time taken away. If you are ready for the challenge, click start.
+            </div>
+            <div id="answers">
+                <button class="button">Start</button>
+            </div>
+        </main>
+    </section>
+    <script src="quiz_game.js"></script>
 </body>
 </html>
