--- a/quiz_game.html
+++ b/quiz_game.html
@@ -9,16 +9,26 @@
 </head>
 <body>
     <section class="container">
-            <header class="nav">
-                    <div id="highscore">HighScore</div>
-                    <div id="timer">Timer</div>
-                </header>
-            
+        <header class="nav">
+            <div id="highscore">
+                HighScore
+                <hr>
+                <span id="highscoreDisplay">EWH 1337</span>
+                </div>
+            <div id="timer">
+                Timer
+                <hr>
+                <span id="timeLeft">60</span>
+            </div>
+        </header>
         <main class="quizBox">
             <div id="question">
                 Welcome to the ultimate Full-stack Web Developer BootCamp Quiz! Test your web developer knowledge and get your name on the leaderboards. You have 60 seconds to answer as many questions correctly as possible, but if you get them wrong, you'll have time taken away. If you are ready for the challenge, click start.
             </div>
             <div id="answers">
+                <button class="button">Start</button>
+                <button class="button">Start</button>
+                <button class="button">Start</button>
                 <button class="button">Start</button>
             </div>
         </main>
