Responsive to width

--- a/quiz_game.html
+++ b/quiz_game.html
@@ -27,6 +27,9 @@
             </div>
             <div id="answers">
                 <button class="button">Start</button>
+                <button class="button">Start</button>
+                <button class="button">Start</button>
+                <button class="button">Start</button>
             </div>
         </main>
     </section>
