--- a/quiz_game.html
+++ b/quiz_game.html
@@ -13,7 +13,7 @@
             <div id="highscore">
                 HighScore
                 <hr>
-                <span id="highscoreDisplay">EWH 1337</span>
+                <span id="highscoreName">EWH</span> <span id="highscoreValue">1337</span>
                 </div>
             <div id="timer">
                 Timer
