--- a/quiz_game.html
+++ b/quiz_game.html
@@ -13,12 +13,12 @@
             <div id="highscore">
                 HighScore
                 <hr>
-                <span id="highscoreName">EWH</span> <span id="highscoreValue">1337</span>
+                <span id="highscoreName">No</span> <span id="highscoreValue">highscores</span>
                 </div>
             <div id="timer">
                 Timer
                 <hr>
-                <span id="timeLeft">60</span>
+                <span id="timeLeft">180</span>
             </div>
         </header>
         <main class="quizBox">
